[package]
name = "windows-pet"
version = "0.1.0"
description = "桌面布偶猫桌宠"
authors = ["you"]
edition = "2021"

[lib]
name = "windows_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "windows-pet"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"

[dependencies.tauri-build]
version = "2"
